# NoticeFlow

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release-macos.yml
docs/: index.html  release.md  styles.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_runner.rs  app_catalog.rs  app_settings.rs  main.rs  notification_archive.rs  notification_db.rs  rules.rs  variables.rs
src/components/: AppPicker.tsx  AppShell.tsx  FormBits.tsx  Switch.tsx
src/features/history/: ActionHistoryPage.tsx
src/features/notifications/: NotificationsPage.tsx
src/features/rules/: RuleBoard.tsx  RuleEditor.tsx
src/features/settings/: SettingsPanel.tsx
src/hooks/: useAutoDismissNotice.ts  useAutomationEvents.ts  useGlobalMenuDismiss.ts  useNotificationActions.ts  useNotificationCenter.ts  useRuleActions.ts  useRuleDrag.ts  useRuleEditorDraft.ts  useRuleNavigation.ts  useRulePreview.ts  useRuleTestActions.ts  useSettingsMaintenanceActions.ts  useSettingsViewRefresh.ts
src/lib/: appModel.ts  historyModel.ts  tauri.ts
tools/: create-updater-manifest.mjs  render-icon.html
