[package]
name = "noticeflow"
version = "0.2.1"
description = "A local macOS notification automation app built with Tauri."
authors = ["NotoChen"]
license = "MIT"
repository = "https://github.com/NotoChen/NoticeFlow"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
dirs = "6.0.0"
libc = "0.2"
objc2-foundation = { version = "0.3.2", features = ["NSFileManager", "NSString"] }
plist = "1.8.0"
regex = "1.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.3", features = ["tray-icon"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = true
codegen-units = 1
